--- a/server/public/views/templates/about.html
+++ b/server/public/views/templates/about.html
@@ -44,7 +44,7 @@
               <p class="quote">
                 "A program is crystallized thought."
               </p>
-              <p class="name">&mdash;Marijn Haverbeke, <i>Eloquent Javascript</i>, Ch. 8
+              <p class="name">&mdash;Marijn Haverbeke, <i>Eloquent JavaScript</i>, Ch. 8
               </p>
             <br>
               <p class="quote">
@@ -96,8 +96,8 @@
             <div class="iconHolder" layout="row">
               <a href="https://www.linkedin.com/in/zack-stout-001/">
                 <img class="icon" src="styles/linkedin_icon.png"></a>
-                &emsp; <a class="linkTextAbout" href="https://www.linkedin.com/in/zack-stout-001/"><span>
-                  linkedin.com/in/zack-stout-001
+                &emsp; <a class="linkTextAbout" href="https://www.linkedin.com/in/zack-stout-01/"><span>
+                  linkedin.com/in/zack-stout-01
                 </span></a>
               </div>
 
