--- a/server/public/views/templates/portfolio.html
+++ b/server/public/views/templates/portfolio.html
@@ -47,7 +47,7 @@
     <ul>
       <li>Design worlds (composed of a rotatable cannon, a target, obstacles, and a set of portals) for other users to play through and solve.</li>
       <li>Save your worlds mid-edit, update the sizes and positions of your obstacles, and keep track of your favorite worlds as well as the worlds you've created.</li>
-      <li>See the top three times for completions of every world, and in the favorites list, see your top completion time for each world.</li>
+      <li>See the fastest three times for completions of every world, and in the favorites list, see your best completion time for each world.</li>
     </ul>
 
     <div  class="iconContainer">
