--- a/views/index.html
+++ b/views/index.html
@@ -21,13 +21,11 @@
   <script type="text/javascript" src="scripts/controllers/portfolio.js"></script>
   <link rel="stylesheet" href="styles/style.css">
 
+<!-- very odd that title will not change but regular text will: -->
   <title>Zack Stout</title>
 </head>
 <body ng-app='app'>
-  <!-- <h1>hello</h1> -->
-
-  <header ng-include="'views/partials/header.html'"></header>
-<!-- <md-checkbox>Kickin it</md-checkbox> -->
+  <!-- <header ng-include="'views/partials/header.html'"></header> -->
   <main ng-view></main>
 </body>
 </html>
