--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="styles/style.css">
 
 <!-- very odd that title will not change but regular text will: -->
-  <title>Zack Stout</title>
+  <title>Zack Stout: Personal Page</title>
 </head>
 <body ng-app='app'>
   <!-- <header ng-include="'views/partials/header.html'"></header> -->
