--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,7 @@
   <script type="text/javascript" src="scripts/controllers/portfolio.js"></script>
   <link rel="stylesheet" href="styles/style.css">
 
-<!-- very odd that title will not change but regular text will: -->
+<!-- very odd that title will not change but regular text will: ahhhhhha it was because it is looking at the *other* index! No actually it was even stranger, i ended up just changing it on github-->
   <title>Zack Stout: Personal Page</title>
 </head>
 <body ng-app='app'>
