--- a/views/templates/blog.html
+++ b/views/templates/blog.html
@@ -161,6 +161,15 @@
     </tr>
   </tbody>
 </table> -->
+<!-- <div layout="row">
+  <span><span id="binNumHolder"></span><span id="binNumHolder2"></span><span id="binNumHolder3"></span></span>
+</div>
+
+<div layout layout-align="center center">
+  <canvas id="binaryCount" width="600" height="300"></canvas>
+</div>
+<button ng-click="bc.goBack()">back</button>
+<button ng-click="bc.goForward()">forward</button> -->
 
 
 <div layout layout-align="center center" class="blogText">
@@ -261,7 +270,7 @@
 </div>
 
 <div class="blogText">
-  We can illustrate this fact by drawing a quarter-circle, and using each point that lies upon it to connect the interval [0, 1] to the interval [0, &Inf;].
+  We can illustrate this fact by drawing a quarter-circle, and using each point that lies upon it to connect the interval [0, 1] to the interval [0, &infin;).
 </div>
 
 
