--- a/views/templates/portfolio.html
+++ b/views/templates/portfolio.html
@@ -52,11 +52,11 @@
 
     <div  class="iconContainer">
       <p>
-        <a class="linkText" href="https://github.com/zackstout/world-weaver/tree/master/SOLO/WORLD%20WEAVER">
+        <a class="linkText" href="https://github.com/zackstout/Solo_Project">
           <img class="icon2" src="styles/github_icon.svg">GitHub Repository</a>
         </p>
         <p>
-          <a class="linkText" href="https://www.google.com">
+          <a class="linkText" href="https://hidden-fortress-46439.herokuapp.com">
           <img class="icon2" src="styles/heroku_icon.png" alt="">Live Demo</a>
         </p>
     </div>
@@ -166,8 +166,8 @@
             <img class="icon2" src="styles/github_icon.svg">GitHub Repository</a>
           </p>
           <p>
-            <a class="linkText" href="https://tranquil-shore-40044.herokuapp.com/#!/listings">
-            <img class="icon2" src="styles/heroku_icon.png" alt="">Live Demo</a>
+            <!-- <a class="linkText" href="https://tranquil-shore-40044.herokuapp.com/#!/listings">
+            <img class="icon2" src="styles/heroku_icon.png" alt="">Live Demo</a> -->
           </p>
         </div>
     </div>
