--- a/views/templates/portfolio.html
+++ b/views/templates/portfolio.html
@@ -24,6 +24,56 @@
   <canvas id="cycloid" width="600" height="150"></canvas>
 
 </div>
+
+
+<span class="PortHeader">Group Project</span>
+
+<div layout="column">
+
+
+<div class="projContainer" layout="row">
+  <div class="imageContainer">
+    <a class="linkText" href="https://github.com/zackstout/world-weaver/tree/master/SOLO/WORLD%20WEAVER">
+
+    <img class="preview" src="styles/solo_preview.png" alt="">
+  </a>
+  </div>
+  <div class="projectInfoContainer">
+
+  <div class="containerContainer">
+    <p class="projName">
+      World Weaver
+    </p>
+
+
+    <ul>
+      <li>Design worlds (composed of a rotatable cannon, a target, obstacles, and a set of portals) for other users to play through and solve.</li>
+      <li>Save your worlds mid-edit, update the sizes and positions of your obstacles, and keep track of your favorite worlds as well as the worlds you've created.</li>
+      <li>See the fastest three times for completions of every world, and in the favorites list, see your best completion time for each world.</li>
+    </ul>
+
+    <div  class="iconContainer">
+      <p>
+        <a class="linkText" href="https://github.com/zackstout/Solo_Project">
+          <img class="icon2" src="styles/github_icon.svg">GitHub Repository</a>
+        </p>
+        <p>
+          <a class="linkText" href="https://hidden-fortress-46439.herokuapp.com">
+          <img class="icon2" src="styles/heroku_icon.png" alt="">Live Demo</a>
+        </p>
+    </div>
+
+
+  </div>
+
+
+
+  </div>
+</div>
+</div>
+
+
+
 <span class="PortHeader">Solo Project</span>
 
 <div layout="column">
