removed nonexistent group proj section

--- a/views/templates/blog.html
+++ b/views/templates/blog.html
@@ -434,7 +434,7 @@ print myArray
         'cedar'];
       var c_trees = trees.filter(
         function(tree, trees) {
-          return tree.charAt(0) == 'c'
+          return tree.charAt(0) == 'c';
         });
       //Or, with an arrow function:
       var c_trees = trees.filter(() =>
