--- a/views/templates/portfolio.html
+++ b/views/templates/portfolio.html
@@ -25,7 +25,7 @@
 
 </div>
 
-
+<!--
 <span class="PortHeader">Group Project</span>
 
 <div layout="column">
@@ -70,7 +70,7 @@
 
   </div>
 </div>
-</div>
+</div> -->
 
 
 
