--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,8 @@
   <script src="vendors/angular-messages.min.js" charset="utf-8"></script>
   <link rel="stylesheet" href="vendors/angular-material.min.css">
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <script type="text/javascript" src="scripts/client.js"></script>
