--- a/views/templates/blog.html
+++ b/views/templates/blog.html
@@ -34,133 +34,7 @@
   <canvas id="triangle" width="300" height="300"></canvas>
 </div> -->
 
-<!--
-<table>
-  <thead>
-  </thead>
-  <tbody id="mineSweeper">
-    <tr>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-    </tr>
-    <tr>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-    </tr>
-    <tr>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-    </tr>
-    <tr>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-    </tr>
-    <tr>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-    </tr>
-    <tr>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-    </tr>
-    <tr>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-    </tr>
-    <tr>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-    </tr>
-    <tr>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-    </tr>
-    <tr>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-      <td><button class="mineButton" ng-click="bc.checkBox()"> </button></td>
-    </tr>
-  </tbody>
-</table> -->
+
 <!-- <div layout="row">
   <span><span id="binNumHolder"></span><span id="binNumHolder2"></span><span id="binNumHolder3"></span></span>
 </div>
@@ -173,7 +47,11 @@
 
 
 
+<div layout layout-align="center center">
+  <table id="mineSweep">
 
+  </table>
+</div>
 
 
 
@@ -263,6 +141,11 @@
 
 
 <hr> -->
+
+
+<!-- <canvas id="chartdemo" width="300" height="300"></canvas> -->
+
+
 
 <div layout="column" layout-align="center center" id="post7">
   <div >
@@ -436,7 +319,7 @@ print myArray
         function(tree, trees) {
           return tree.charAt(0) == 'c';
         });
-      //Or, with an arrow function:
+//Or, with an arrow function:
       var c_trees = trees.filter(() =>
         {return tree.charAt(0) == 'c'});</code></pre>
   </div>
@@ -498,7 +381,7 @@ print myArray
 </div>
 
 <div class="blogText">
-  There is plenty more to explore in Python &mdash; especially the plethora of libraries that are available for you to <span class="codeBit">import</span> into your project &mdash; but hopefully this has been enough to convince you that the transition from JavaScript into Python can be a natural and smooth one.
+  There is plenty more to explore in Python &mdash; especially the plethora of libraries that are available for you to <span class="codeBit">import</span> into your project &mdash; but hopefully this has been enough to convince you that the transition from JavaScript into Python can be a smooth one.
 </div>
 
 <hr>
@@ -914,8 +797,7 @@ var omega = Bodies.circle(500, 500, 100, {isStatic: true});
       As a bonus, since one natural way of writing the code ensures that the x-value changes linearly (at a constant rate), the ball will behave as if it is under the influence of gravity!
     </div>
 
-    <pre><code layout layout-align="center center">
-    vm.x = 0;
+    <pre><code layout layout-align="center center">    vm.x = 0;
     function ball() {
         ctx.clearRect(0,0,400,400);
         var xStandard = (vm.x - 200)/100;
