--- a/views/templates/portfolio.html
+++ b/views/templates/portfolio.html
@@ -81,7 +81,7 @@
 
 <div class="projContainer" layout="row">
   <div class="imageContainer">
-    <a class="linkText" href="https://github.com/zackstout/world-weaver/tree/master/SOLO/WORLD%20WEAVER">
+    <a class="linkText" href="https://github.com/zackstout/Solo_Project">
 
     <img class="preview" src="styles/solo_preview.png" alt="">
   </a>
