fixing for public view

--- a/views/templates/blog.html
+++ b/views/templates/blog.html
@@ -142,8 +142,10 @@
 
 <hr> -->
 
+<!-- <div layout layout-align="center center">
+  <canvas id="chartdemo" width="500" height="500"></canvas>
 
-<!-- <canvas id="chartdemo" width="300" height="300"></canvas> -->
+</div> -->
 
 
 
