--- a/views/templates/portfolio.html
+++ b/views/templates/portfolio.html
@@ -25,7 +25,7 @@
 
 </div>
 
-<!--
+
 <span class="PortHeader">Group Project</span>
 
 <div layout="column">
@@ -33,34 +33,34 @@
 
 <div class="projContainer" layout="row">
   <div class="imageContainer">
-    <a class="linkText" href="https://github.com/zackstout/world-weaver/tree/master/SOLO/WORLD%20WEAVER">
+    <a class="linkText" href="https://github.com/footprint-project/Footprint">
 
-    <img class="preview" src="styles/solo_preview.png" alt="">
+    <img class="preview" src="styles/fpFront.png" alt="">
   </a>
   </div>
   <div class="projectInfoContainer">
 
   <div class="containerContainer">
     <p class="projName">
-      World Weaver
+      Footprint
     </p>
 
 
     <ul>
-      <li>Design worlds (composed of a rotatable cannon, a target, obstacles, and a set of portals) for other users to play through and solve.</li>
-      <li>Save your worlds mid-edit, update the sizes and positions of your obstacles, and keep track of your favorite worlds as well as the worlds you've created.</li>
-      <li>See the fastest three times for completions of every world, and in the favorites list, see your best completion time for each world.</li>
+      <li>Upload monthly reports (as CSV-spreadsheets) reflecting your humanitarian organization's carbon footprint.</li>
+      <li>Create, edit and delete projects as well as monthly reports for those projects. </li>
+      <li>Visualize your data across all your projects over time, or in customizable ways &mdash; choosing your category and then your dividing variable.</li>
     </ul>
 
     <div  class="iconContainer">
       <p>
-        <a class="linkText" href="https://github.com/zackstout/Solo_Project">
+        <a class="linkText" href="https://github.com/footprint-project/Footprint">
           <img class="icon2" src="styles/github_icon.svg">GitHub Repository</a>
         </p>
-        <p>
+        <!-- <p>
           <a class="linkText" href="https://hidden-fortress-46439.herokuapp.com">
           <img class="icon2" src="styles/heroku_icon.png" alt="">Live Demo</a>
-        </p>
+        </p> -->
     </div>
 
 
@@ -70,7 +70,7 @@
 
   </div>
 </div>
-</div> -->
+</div>
 
 
 
