--- a/views/templates/blog.html
+++ b/views/templates/blog.html
@@ -198,7 +198,7 @@
 <button ng-click="bc.goForward()">forward</button> -->
 
 <div class="blogText">
-  Astonishly, no matter how many discs we add, this algorithm will generate the fastest path (least number of moves) from first tower to second! (What happens if we increase the number of pegs...?)
+  Astonishly, no matter how many discs we add, this algorithm will generate the fastest path (least number of moves) from first tower to second! It always takes 2<sup>n</sup> - 1 steps, where n is the number of discs. (What happens if we increase the number of pegs...?)
 </div>
 
 
